[project]
name = "neo4j-python-migrations"
version = "0.1.4"
description = "A database migration tool for Neo4j that allows to apply Cypher-based and arbitrary Python-based migrations."
authors = [{ name = "Grigory Bukovsky", email = "booqoffsky@yandex.ru" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "neo4j",
    "migrations",
    "python",
    "migrator",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "neo4j>=5",
    "typer>=0,<1",
    "yarl>=1,<2",
    "packaging>=24",
]

[project.urls]
Repository = "https://github.com/booqoffsky/neo4j-python-migrations"

[dependency-groups]
dev = [
    "black>=22.10.0",
    "mypy>=1",
    "wemake-python-styleguide>=1",
    "isort>=7",
    "pytest>=8",
    "pytest-cov>=7",
    "pyfakefs>=5.10.2",
]

[tool.hatch.build.targets.sdist]
include = ["neo4j_python_migrations"]

[tool.hatch.build.targets.wheel]
include = ["neo4j_python_migrations"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false
namespace_packages = true
exclude = ['venv/']

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["neo4j_python_migrations", "tests",]
